<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:scaleType="fitXY"
            android:id="@+id/img_passlock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/lock44" />

    <LinearLayout
            android:id="@+id/ln_layoutpass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="#000">

            <ImageView
                    android:id="@+id/img_song"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"

                    android:layout_marginLeft="-6dp"
                    android:src="@drawable/icon_song" />

            <TextView
                    android:id="@+id/tv_telecom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="-5dp"
                    android:layout_toRightOf="@+id/img_song"
                    android:text="Vina"
                    android:textColor="#FFFF"
                    android:textSize="13sp" />

            <TextView
                    android:id="@+id/tv_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/img_pin"
                    android:text="41%"
                    android:textColor="#FFFF"
                    android:textSize="13sp" />

            <ImageView
                    android:id="@+id/img_pin"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="-5dp"
                    android:src="@drawable/icon_pin60" />
        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:text="Touch ID or Password"
                    android:textColor="#FFF"
                    android:textSize="17sp" />

            <LinearLayout
                    android:id="@+id/ln_circle_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/pass1"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/circle_password" />

                <ImageView
                        android:id="@+id/pass2"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/circle_password" />

                <ImageView
                        android:id="@+id/pass3"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/circle_password" />

                <ImageView
                        android:id="@+id/pass4"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/circle_password" />

                <ImageView
                        android:id="@+id/pass5"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/circle_password" />

                <ImageView
                        android:id="@+id/pass6"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:background="@drawable/circle_password" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="7.1"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/btn_1"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/click_button"
                        android:text="@string/mot"
                        android:textColor="#FFF"
                        android:textSize="15sp" />

                <Button
                        android:id="@+id/btn_2"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/click_button"
                        android:text="@string/hai"
                        android:textColor="#FFF"
                        android:textSize="15sp" />

                <Button
                        android:id="@+id/btn_3"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/click_button"
                        android:text="@string/ba"
                        android:textColor="#FFF"
                        android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/btn_4"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/click_button"
                        android:text="@string/bon"
                        android:textColor="#FFF"
                        android:textSize="15sp" />

                <Button
                        android:id="@+id/btn_5"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/click_button"
                        android:text="@string/nam"
                        android:textColor="#FFF"
                        android:textSize="15sp" />

                <Button
                        android:id="@+id/btn_6"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/click_button"
                        android:text="@string/sau"
                        android:textColor="#FFF"
                        android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/btn_7"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/click_button"
                        android:text="@string/bay"
                        android:textColor="#FFF"
                        android:textSize="15sp" />

                <Button
                        android:id="@+id/btn_8"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/click_button"
                        android:text="@string/tam"
                        android:textColor="#FFF"
                        android:textSize="15sp" />

                <Button
                        android:id="@+id/btn_9"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/click_button"
                        android:text="@string/chin"
                        android:textColor="#FFF"
                        android:textSize="15sp" />


            </LinearLayout>

            <Button
                    android:id="@+id/btn_0"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/click_button"
                    android:text="@string/ko"
                    android:textColor="#FFF"

                    android:textSize="17sp" />
        </LinearLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6">

            <TextView
                    android:id="@+id/tv_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="Emergency"
                    android:textColor="#FFFF"
                    android:textSize="17sp" />

            <TextView
                    android:id="@+id/tv_cancle_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="50dp"
                    android:text="Cancel"
                    android:textColor="#FFFF"
                    android:textSize="17sp" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>